--- a/30_sources/ZGEN_Documents/UD_Zupfnoter-Handbuch-de_review.latex
+++ b/30_sources/ZGEN_Documents/UD_Zupfnoter-Handbuch-de_review.latex
@@ -204,7 +204,7 @@
 
 \hyphenation{Zupf-noter} \hyphenation{Fen-ster}
 
-Version 1.6.0 dev 7
+Version 1.6.1
 
 © 2017 https://www.zupfnoter.de
 
@@ -2043,7 +2043,7 @@ vorläufig.
   \textbf{Hinweis}': Über das Hilfe Menü kann man auch Beispiele
   aufrufen. Diese öffnen ein neues Zupfnoter-Fenster im Demo - Modus. In
   desem Modus kann man nicht speichern oder öffen. Die entprschenden
-  Menüpunkte sind ausgegraut.
+  Menüpunkte sind inaktiv.
 
   Der aktuelle Modus wird in der Statuszeile angezeigt.
   \end{quote}
@@ -4570,7 +4570,7 @@ TODO:\marginpar{TODO} Helptext für presets einfügen
           "LINE_THICK"   : 0.7,
           "REST_SIZE"    : [4, 2]
         },
-        "layout_regular" : "#<Proc:0x007f991b12ec18@/Users/beweiche/beweiche_noTimeMachine/200_zupfnoter/30_sources/SRC_Zupfnoter/src/init_conf.rb:75 (lambda)>"
+        "layout_regular" : null
       },
       "notes"   : {
         "T01_number"               : {
@@ -4655,177 +4655,8 @@ Notenbild gezielt optimieren.
         "LINE_THICK"   : 0.7,
         "REST_SIZE"    : [4, 2]
       },
-      "layout_regular" : "#<Proc:0x007f991b12ec18@/Users/beweiche/beweiche_noTimeMachine/200_zupfnoter/30_sources/SRC_Zupfnoter/src/init_conf.rb:75 (lambda)>"
+      "layout_regular" : null
     }
-      
-\end{verbatim}
-
-\subsection{\texorpdfstring{\texttt{presets.layout.layout\_compact} -
-Kompaktes
-Layout}{presets.layout.layout\_compact - Kompaktes Layout}}\label{presets.layout.layoutux5fcompact}
-
-TODO:\marginpar{TODO} Helptext für presets.layout.layout\_compact
-einfügen
-
-\begin{verbatim}
-    "layout_compact": {
-      "ELLIPSE_SIZE" : [3.5, 1.3],
-      "LINE_MEDIUM"  : 0.2,
-      "LINE_THICK"   : 0.3,
-      "REST_SIZE"    : [4, 1.5]
-    }
-      
-\end{verbatim}
-
-\subsection{\texorpdfstring{\texttt{presets.layout.layout\_compact.ELLIPSE\_SIZE}
--
-Notengröße}{presets.layout.layout\_compact.ELLIPSE\_SIZE - Notengröße}}\label{presets.layout.layoutux5fcompact.ELLIPSEux5fSIZE}
-
-Hier kannst du die Größe der ganzen Noten einstellen. Sinnvolle Werte
-sind {[}2-4, 1.2-2{]}.
-
-\begin{quote}
-\textbf{Hinweis}: Die Größe der anderen Noten werden ausgehend von
-diesem Wert berechnet.
-
-Da die Noten auch mit der dicken Linie umrandet werden, kann auch die
-``Linienstärke \texttt{dick}'' reeduziert werden, um ein filigraneres
-Notenbild zu erhalten.
-\end{quote}
-
-\begin{verbatim}
-    "ELLIPSE_SIZE": [3.5, 1.3]
-      
-\end{verbatim}
-
-\subsection{\texorpdfstring{\texttt{presets.layout.layout\_compact.LINE\_MEDIUM}
-- Linienstärke
-mittel}{presets.layout.layout\_compact.LINE\_MEDIUM - Linienstärke mittel}}\label{presets.layout.layoutux5fcompact.LINEux5fMEDIUM}
-
-TODO:\marginpar{TODO} Helptext für
-presets.layout.layout\_compact.LINE\_MEDIUM einfügen
-
-\begin{verbatim}
-    "LINE_MEDIUM": 0.2
-      
-\end{verbatim}
-
-\subsection{\texorpdfstring{\texttt{presets.layout.layout\_compact.LINE\_THICK}
-- Linienstärke
-dick}{presets.layout.layout\_compact.LINE\_THICK - Linienstärke dick}}\label{presets.layout.layoutux5fcompact.LINEux5fTHICK}
-
-TODO:\marginpar{TODO} Helptext für
-presets.layout.layout\_compact.LINE\_THICK einfügen
-
-\begin{verbatim}
-    "LINE_THICK": 0.3
-      
-\end{verbatim}
-
-\subsection{\texorpdfstring{\texttt{presets.layout.layout\_compact.REST\_SIZE}
--
-Pausengröße}{presets.layout.layout\_compact.REST\_SIZE - Pausengröße}}\label{presets.layout.layoutux5fcompact.RESTux5fSIZE}
-
-Hier kannst du die Größe der Pausen einstellen. Sinnvolle Werte sind
-{[}2-4, 1.2-2{]}
-
-\begin{quote}
-\textbf{Hinweis}:Bitte beachte, dass nur die Angabe der Höhe von
-berücksichtigt wird, da das Pausensymbol nicht verzerrt werden darf.
-\end{quote}
-
-\begin{verbatim}
-    "REST_SIZE": [4, 1.5]
-      
-\end{verbatim}
-
-\subsection{\texorpdfstring{\texttt{presets.layout.layout\_large} -
-Großes
-Layout}{presets.layout.layout\_large - Großes Layout}}\label{presets.layout.layoutux5flarge}
-
-TODO:\marginpar{TODO} Helptext für presets.layout.layout\_large einfügen
-
-\begin{verbatim}
-    "layout_large": {
-      "ELLIPSE_SIZE" : [4, 2],
-      "LINE_MEDIUM"  : 0.3,
-      "LINE_THICK"   : 0.7,
-      "REST_SIZE"    : [4, 2]
-    }
-      
-\end{verbatim}
-
-\subsection{\texorpdfstring{\texttt{presets.layout.layout\_large.ELLIPSE\_SIZE}
--
-Notengröße}{presets.layout.layout\_large.ELLIPSE\_SIZE - Notengröße}}\label{presets.layout.layoutux5flarge.ELLIPSEux5fSIZE}
-
-Hier kannst du die Größe der ganzen Noten einstellen. Sinnvolle Werte
-sind {[}2-4, 1.2-2{]}.
-
-\begin{quote}
-\textbf{Hinweis}: Die Größe der anderen Noten werden ausgehend von
-diesem Wert berechnet.
-
-Da die Noten auch mit der dicken Linie umrandet werden, kann auch die
-``Linienstärke \texttt{dick}'' reeduziert werden, um ein filigraneres
-Notenbild zu erhalten.
-\end{quote}
-
-\begin{verbatim}
-    "ELLIPSE_SIZE": [4, 2]
-      
-\end{verbatim}
-
-\subsection{\texorpdfstring{\texttt{presets.layout.layout\_large.LINE\_MEDIUM}
-- Linienstärke
-mittel}{presets.layout.layout\_large.LINE\_MEDIUM - Linienstärke mittel}}\label{presets.layout.layoutux5flarge.LINEux5fMEDIUM}
-
-TODO:\marginpar{TODO} Helptext für
-presets.layout.layout\_large.LINE\_MEDIUM einfügen
-
-\begin{verbatim}
-    "LINE_MEDIUM": 0.3
-      
-\end{verbatim}
-
-\subsection{\texorpdfstring{\texttt{presets.layout.layout\_large.LINE\_THICK}
-- Linienstärke
-dick}{presets.layout.layout\_large.LINE\_THICK - Linienstärke dick}}\label{presets.layout.layoutux5flarge.LINEux5fTHICK}
-
-TODO:\marginpar{TODO} Helptext für
-presets.layout.layout\_large.LINE\_THICK einfügen
-
-\begin{verbatim}
-    "LINE_THICK": 0.7
-      
-\end{verbatim}
-
-\subsection{\texorpdfstring{\texttt{presets.layout.layout\_large.REST\_SIZE}
--
-Pausengröße}{presets.layout.layout\_large.REST\_SIZE - Pausengröße}}\label{presets.layout.layoutux5flarge.RESTux5fSIZE}
-
-Hier kannst du die Größe der Pausen einstellen. Sinnvolle Werte sind
-{[}2-4, 1.2-2{]}
-
-\begin{quote}
-\textbf{Hinweis}:Bitte beachte, dass nur die Angabe der Höhe von
-berücksichtigt wird, da das Pausensymbol nicht verzerrt werden darf.
-\end{quote}
-
-\begin{verbatim}
-    "REST_SIZE": [4, 2]
-      
-\end{verbatim}
-
-\subsection{\texorpdfstring{\texttt{presets.layout.layout\_regular} -
-Normales
-Layout}{presets.layout.layout\_regular - Normales Layout}}\label{presets.layout.layoutux5fregular}
-
-TODO:\marginpar{TODO} Helptext für presets.layout.layout\_regular
-einfügen
-
-\begin{verbatim}
-    "layout_regular": "#<Proc:0x007f991b12ec18@/Users/beweiche/beweiche_noTimeMachine/200_zupfnoter/30_sources/SRC_Zupfnoter/src/init_conf.rb:75 (lambda)>"
       
 \end{verbatim}
 
@@ -6067,6 +5898,432 @@ Konfigurationen sinnvoll sein, um die Übersichtlichkeit zu erhöhen.
 \begin{verbatim}
     "wrap": 60
 \end{verbatim}
+
+\cleardoublepage
+
+\section{Änderungshistorie von
+Zupfnoter}\label{uxe4nderungshistorie-von-zupfnoter}
+
+\subsection{V 1.6.1 2017-05-17}\label{v-1.6.1-2017-05-17}
+
+\subsubsection{Fehlerbehebungen}\label{fehlerbehebungen}
+
+\begin{itemize}
+\itemsep1pt\parskip0pt\parsep0pt
+\item
+  Drag und Drop funktioniert nun auch in Firefox
+\item
+  Sektieren von Noten in der Notenvorschau verbessert.
+\item
+  non BWC: Oktavierte Notenschlüssel werden nun beachtet
+\item
+  Schneidemarken werden nur auch bei A4-Ausddruck ausgegeben
+\item
+  Beschrifungen für Variante Enden werden unterddrückt, wenn keine
+  Sprunglinien ausgegeben werden
+\item
+  Taktnummern und Zählhinweise werden für unterdrückte Pause nicht mehr
+  dargestellt
+\item
+  Unsynchronisierte Pausen in Begleitstimmen werden nun dargestellt
+\item
+  Bessere Fehlermeldung für nicht existierende Auszüge
+\item
+  non BWC: Automaitsche Positionierung von Taktnummern und Zählhinweisen
+  deutlich verbessert
+\item
+  Notengröße und Gestalt der Einlegemarken korrigiert
+\item
+  MXL-dateien aus Musescor können nun auch importiert werden (Bislang
+  nur solce, die von musescore.org heruntergeladen wurden)
+\item
+  Verbesserung der ABC 2.2 Unterstützung
+\item
+  Verbesserte Darstellung bei überlapenden Synchroniationslinien
+\item
+  Konfigurationsmasken deutlich beschleunigts
+\item
+  Tonarmodus (dur, moll) beibt bei Transponierung erhalten
+\item
+  Referenz erzeugt nun keine Fehlermehr
+\end{itemize}
+
+\subsubsection{Erweiterung}\label{erweiterung}
+
+\begin{itemize}
+\itemsep1pt\parskip0pt\parsep0pt
+\item
+  In Liedtexten kann man mit \texttt{\textbackslash{}\textasciitilde{}}
+  feste Leerzeichen erzwingen
+\item
+  Unterlegnotenvorschau wird vor dem Rendern gelöscht
+\item
+  Der Fingerabdruck erscheint nun auch auf der Notenvorschau
+\item
+  Die Ausgabe von Triolen (n-tolen) in Begleitstimmen kann über die
+  Konfigurtion unterdrückt werden
+\item
+  verbesserte ABC 2.2 Unterstützung
+\item
+  Anpassung auf neue Dropbox-Schnittstelle 2.0
+\item
+  für Dropbox gibt es nun eine eigenes Menü
+\item
+  verbesserte Fehlermeldungen bei Problemen mit Dropbox
+\item
+  Struktur des Konfigurationsmenüs verbessert
+\item
+  ABC-Tutorial von Gerd Schacherl verlinkt
+\item
+  Menüs zum Speichern, Öffnen sind inaktiv im Demo modus
+\end{itemize}
+
+\subsubsection{Experimentelle
+Erweiterungen}\label{experimentelle-erweiterungen}
+
+\begin{itemize}
+\itemsep1pt\parskip0pt\parsep0pt
+\item
+  Man kann nun sein eigenes Template anlegen und einrichten
+\item
+  Man kann den vertikalen Abstand von Noten korrigieren.
+\end{itemize}
+
+\subsubsection{inkompatible Änderungen - notwendige
+Anpassungen}\label{inkompatible-uxe4nderungen---notwendige-anpassungen}
+
+\begin{itemize}
+\itemsep1pt\parskip0pt\parsep0pt
+\item
+  Oktavierte Schlüssel: Wenn man bei einer Stimme z.B. clef=treble-8
+  angibt, wird eine kleine 8 unter den Violinschlüssel geschrieben. Ihr
+  müsst also die ``-8'' rauslöschen, damit es wieder so ist, wie
+  vorher.Leider hat das Template in Zupfnoter dieses ``-8'' eingefügt.
+\item
+  Transponierungen innerhalb einer Stimme muss angepsasst werden
+\item
+  Taknummern und Zählhinwese werden nun automatisch positioniert, ggf.
+  ausschalten.
+\item
+  Bei mehreren aufeinanderfolgenden \texttt{{[}P:{]}} bzw
+  \texttt{{[}r:{]}} wirkt nur die letzte
+\item
+  Fehlermeldung, wenn F: - zeile fehlt
+\item
+  Fehlermeldung der F: - Zeile Leerzeichen oder Sonderzeichen enthält
+\end{itemize}
+
+\subsection{V 1.5}\label{v-1.5}
+
+\subsubsection{backward compatibility
+issues}\label{backward-compatibility-issues}
+
+\begin{itemize}
+\itemsep1pt\parskip0pt\parsep0pt
+\item
+  filenames are now trimmed - this might lead to slightly different
+  filenames in dropbox
+\item
+  we now have a filenamepart per extract. It allows to change titles
+  without changing the filenames. Future releases might introduce a
+  default value. So better adapt this parameter now.
+\item
+  you need first to invoke ``login'' in Zupfnoter before you can use the
+  ``open''
+\item
+  the fingerprint on a page might change as we now have 2 decimal digits
+  in configuration \#95
+\end{itemize}
+
+\subsubsection{Fix}\label{fix}
+
+\begin{itemize}
+\itemsep1pt\parskip0pt\parsep0pt
+\item
+  adjusted German language also for error messages \#47
+\item
+  communication with Dropbox (error handling etc.) \#77
+\item
+  improved auto positioning of barnumbers and counthints \#81
+\item
+  builtin sheet annotation no longer claims a copyright \#69
+\item
+  optimized position of cutmarks \#74
+\item
+  fix whitespace handling in lyrics and filenames \#54
+\item
+  report multiple F and T lines \#54
+\item
+  non BWC trim filename addendum \#54
+\item
+  Jumpline end are now correct in case of a full rest \#50
+\item
+  no longer shift name first and last string in the stringnames \#18
+\item
+  Editor no longer hangs if harpnotes could not be created \#86
+\item
+  abc2svg titletrim now turned off \#88
+\item
+  browser now consider zupfnoter as secure site again \#90
+\item
+  Now also use ctrl/cmd-RETURN for render
+\item
+  Now yield 1.50 instead of 1.49999999 to minimize rounding effects \#95
+\end{itemize}
+
+\subsubsection{Enhancement}\label{enhancement}
+
+\begin{itemize}
+\itemsep1pt\parskip0pt\parsep0pt
+\item
+  now we have configuration paramters for printer optimimization \#82
+\item
+  now have forms based configuration \#67
+\item
+  now have forms based editing of snippets (now called addons) \#83
+\item
+  now have a lyrics editor tab \#8
+\item
+  more styles for annotations \#70
+\item
+  now have a parameter ``filenamepart'' per extract to determine the
+  filename addendum for the extract \#72
+\item
+  now raise a popup if an error occurs on render or save \#76
+\item
+  now have a button to toggle harpnote preview \#93
+\item
+  now have foundation for optimized packer, and an experimental packer
+  \#89
+\item
+  now show information of the day \#98
+\item
+  now have quick settings for some configuration \#97
+\end{itemize}
+
+\subsection{V 1.4.2}\label{v-1.4.2}
+
+\subsubsection{Fix}\label{fix-1}
+
+\begin{itemize}
+\itemsep1pt\parskip0pt\parsep0pt
+\item
+  barnumbers are small\_bold again \#60
+\item
+  optimized placement of cutmarks \#74
+\item
+  fixed tempo note for e.g.~3/8= 120 \#79
+\item
+  fix countnotes \#78
+\end{itemize}
+
+\subsection{V 1.4.2}\label{v-1.4.2-1}
+
+\subsubsection{Fix}\label{fix-2}
+
+\begin{itemize}
+\itemsep1pt\parskip0pt\parsep0pt
+\item
+  remove copyright note from sheet annotation \#69
+\end{itemize}
+
+\subsubsection{enhancement}\label{enhancement-1}
+
+\begin{itemize}
+\itemsep1pt\parskip0pt\parsep0pt
+\item
+  add textstyles: italic, small\_bold, small\_italic
+\end{itemize}
+
+\subsection{V 1.4.1}\label{v-1.4.1}
+
+\subsubsection{enhancment}\label{enhancment}
+
+\begin{itemize}
+\itemsep1pt\parskip0pt\parsep0pt
+\item
+  suppress measure bar if repetition starts within measure \#42
+\end{itemize}
+
+\subsubsection{fixes}\label{fixes}
+
+\begin{itemize}
+\itemsep1pt\parskip0pt\parsep0pt
+\item
+  force reading dropped abc-files as utf-8 \#66
+\item
+  annotation template now works
+\end{itemize}
+
+\subsection{V 1.4.0}\label{v-1.4.0}
+
+\begin{itemize}
+\itemsep1pt\parskip0pt\parsep0pt
+\item
+  fixed harpnote-player (no longer relies on last voice, no noise if
+  song starts with rests) (\#20)
+\item
+  countnotes: draw hints how to count close to the notes (\#21).
+  Configure by
+  \texttt{"countnotes"\ :\ \{"voices":\ {[}1{]},\ "pos":\ {[}3,\ -2{]}\}}
+\item
+  fixed position of bars (\#16)
+\item
+  refined representation of rests (\#16): full rest now has same size as
+  full note
+\item
+  refined layout of jumplines: now considering size of symbol
+\item
+  Draw a measure bar on the first note if the first measure is a
+  complete one (\#23)
+\item
+  notes are shifted left/right if on the border of A3 sheets. This
+  supports printing on A3 sheets (\#17)
+\item
+  removed spinner, progress indicator is again only background-color
+  (reuqested by Karl)
+\item
+  advanced approach to represent variant endings (\#10)
+\item
+  config menu no longer overrides existing entries with the default
+  values (\#25)
+\item
+  now have a button to download the abc (\#26)
+\item
+  how have keyboard shortcuts cmd-P, cmd-R, cmd-S \#37
+\item
+  non BWC: unisons are nore connected to their last note (\#32); migrate
+  by inverting the unisons
+\item
+  non BWC: restructure of notebound annotations (\#33); migrate by
+  delete notebound configuration and reposition {[}r:{]} needs to start
+  with lowercase letter, all now works per voice only;
+\item
+  update favorite icon to Zupfnoter logo
+\item
+  now can print a scalebar with very flexible configuration \#18
+\item
+  now can print repeatsigns as alternative to jumplines; flowline is now
+  interrupted upon repeat start/end \#3
+\item
+  rearranged config menu, added hints visble on hove \#37
+\item
+  console is now on cmd-K - only \#37
+\item
+  shape of tuplet slur can now be configured \#39 - this is an
+  experimental implementation and subject of changing.
+\item
+  play button now plays: \#40
+\item
+  if nothing is selected: the entire song in all voices
+\item
+  if one note is selected: the song from selection, only voices of
+  current extract
+\item
+  if more than one notes are selected: the selection only
+\item
+  shift key now expands the selection \#40
+\item
+  now support !fermata! and !empphasis! decorations \#30
+\item
+  now place a fingerprint of input on the sheet. Sheets with identical
+  fingerprints stm from the same input. \#22
+\item
+  improved demo mode \#43
+\item
+  config menu now investigates the next free key for lyrics and note
+  \#44
+\item
+  initial version of localization \#47
+\item
+  non BWC: algorithm for horizontal position of rests can now be
+  configured. Default is different thatn in 1.3 Configuration menu
+  provides an entry to switch to 1.3 behavior. \#58
+\item
+  Now generate a HTML-Page with the music notes for tune preview - also
+  saves the html in Dropbox \#59
+\item
+  prevent automatic processing after initialization by adding ?debug to
+  the url \#61
+\item
+  Now generate bar numers \#60
+\item
+  improve adjustment of zoom levels \#62
+\end{itemize}
+
+\subsection{V 1.3.1 2016-05-17}\label{v-1.3.1-2016-05-17}
+
+\begin{itemize}
+\item
+  initial support of voice overlays (bars do not always show up)
+\item
+  raise an alert before unloading Zupfnoter
+\item
+  indicate draggable text by ``pointer'' cursors
+\item
+  notebound annotations can be dragged if the note has an {[}r:{]}
+  remark which serves as note-id.
+\item
+  config menu now injects some layout options
+\item
+  no error message on {[}r:{]} - remarks
+\item
+  some refactorings (abc2svg-json)
+\item
+  update to abc2svg 1.5.22
+\end{itemize}
+
+\subsection{V 1.2.2}\label{v-1.2.2}
+
+\begin{itemize}
+\itemsep1pt\parskip0pt\parsep0pt
+\item
+  slowed down activity animation
+\end{itemize}
+
+\subsection{V 1.2.1}\label{v-1.2.1}
+
+\subsection{V 1.2.0 2016-04-21}\label{v-1.2.0-2016-04-21}
+
+\begin{itemize}
+\itemsep1pt\parskip0pt\parsep0pt
+\item
+  upgrade to abc2svg 1.5.14 ( Crash on some cases of ties since 1.5.6)
+\item
+  let ``play'' call ``render'' before playing if necessary
+\item
+  now use green animation (flying notes) for progress indicator
+\end{itemize}
+
+\subsection{V 1.1.1 2016-04-05}\label{v-1.1.1-2016-04-05}
+
+\begin{itemize}
+\itemsep1pt\parskip0pt\parsep0pt
+\item
+  patched version number
+\end{itemize}
+
+\subsection{V 1.1.0 2016-04-05}\label{v-1.1.0-2016-04-05}
+
+\begin{itemize}
+\itemsep1pt\parskip0pt\parsep0pt
+\item
+  refinements of toolbar: login, new, open, save
+\item
+  add a dialog for create and login
+\item
+  invoke render\_previews on new, open, drag
+\item
+  Improved report of coordinates for dragging annotations
+\end{itemize}
+
+\subsection{V 1.0.0 2016-04-03}\label{v-1.0.0-2016-04-03}
+
+\begin{itemize}
+\itemsep1pt\parskip0pt\parsep0pt
+\item
+  first official release
+\end{itemize}
 
 \index{Rauchmelder|see{Brandmelder}}
 
