--- a/30_sources/ZGEN_Documents/UD_Zupfnoter-Handbuch-de_review.latex
+++ b/30_sources/ZGEN_Documents/UD_Zupfnoter-Handbuch-de_review.latex
@@ -4072,7 +4072,7 @@ Hier kannst du die pack-Methode auswählen
 
 \begin{itemize}
 \item
-  \textbf{0} : Die bisherige Methode: diese geht nach jedem Schrift um
+  \textbf{0} : Die bisherige Methode: diese geht nach jedem Schritt um
   die Höhe der größten Note weiter
 \item
   \textbf{1} : Kopmpakt: diese geht nur dann weiter, wenn
@@ -4091,8 +4091,11 @@ Hier kannst du die pack-Methode auswählen
   \begin{quote}
   \textbf{Hinweis}: Diese Methode eignet sich am besten für lange,
   einstimmige Stücke. Die Platzeinsparung geht bei mehrstimmmigen
-  Stücken schnell verloren. Bei dieser Methode sind die
-  Synchronisiationslinien nicht immer gut sichtbar.
+  Stücken schnell verloren.
+
+  Bei dieser Methode sind die Synchronisiationslinien zwischen den
+  Stimmen nicht immer gut sichtbar weil die Flusslinien ggf. sehr flach
+  sind.
   \end{quote}
 
 \begin{verbatim}
@@ -4128,22 +4131,18 @@ geschaltet.
 Layout}{extract.0.layoutlines - Stimmen für Layout}}\label{extract.0.layoutlines}
 
 Hier kannst du du eine Liste - getrennt durch Komma - der Stimmen
-angeben, die zur die Berechnung des vertikalen Anordnugn der Noten
-(Layout) herangezogen werden sollen.
+angeben, die \textbf{zusätzlich} zu den dargestellten Stimmen zur die
+Berechnung des vertikalen Anordnung der Noten (Layout) herangezogen
+werden sollen.
 
-Üblicherweise werden alle Stimmen für die Berechnung des Layouts
-herangezogen. Bei langen Stücken kann es aber sinnvoll sein, nur die
-dargstellten Stimmmen zur Berechnung des Layouts zu berücksichtigen, um
-ein ausgwogeneres Notenbild zu bekommen.
+Üblicherweise werden nur die dargestellten Stimmen für die Berechnung
+des Layouts herangezogen. Es kann aber sinnvoll sein, weitere Stimmmen
+zur Berechnung des Layouts zu berücksichtigen, um in allen Auszügen ein
+ein gleichartiges Notenbild zu bekommen.
 
 \begin{quote}
 \textbf{Hinweis}: Auch wenn der Parameter \texttt{layoutlines} heißt,
 bewirkt er nicht, dass irgendwelche Linien eingezeichnet werden.
-
-\textbf{Hinweis}: Bei einem Stück mit vielen Noten ist es sinnvoll, hier
-nur die im aktuellen Auszug dargestellten Stimmen aufzulisten. Damit ist
-zwar das Notenbild nicht mehr bei allen Auszügen gleich, die Noten sind
-aber besser verteilt.
 \end{quote}
 
 \begin{verbatim}
@@ -4671,7 +4670,7 @@ TODO:\marginpar{TODO} Helptext für presets einfügen
           }
         },
         "packer_regular" : {
-          "packer" : "#<Proc:0x007fba2218b580@/Users/beweiche/beweiche_noTimeMachine/200_zupfnoter/30_sources/SRC_Zupfnoter/src/init_conf.rb:97 (lambda)>"
+          "packer" : "#<Proc:0x007fb79394ad70@/Users/beweiche/beweiche_noTimeMachine/200_zupfnoter/30_sources/SRC_Zupfnoter/src/init_conf.rb:97 (lambda)>"
         }
       },
       "notes"   : {
@@ -4769,7 +4768,7 @@ Notenbild gezielt optimieren.
         }
       },
       "packer_regular" : {
-        "packer" : "#<Proc:0x007fba2218b580@/Users/beweiche/beweiche_noTimeMachine/200_zupfnoter/30_sources/SRC_Zupfnoter/src/init_conf.rb:97 (lambda)>"
+        "packer" : "#<Proc:0x007fb79394ad70@/Users/beweiche/beweiche_noTimeMachine/200_zupfnoter/30_sources/SRC_Zupfnoter/src/init_conf.rb:97 (lambda)>"
       }
     }
       
