# 150 Tumpline anchor now configurable

--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -111,6 +111,7 @@
     "subflowline": "Hilfsmelodielinie",
     "create": "erzeugen",
     "": "",
+    "-": "-",
     "0": "0",
     "1": "1",
     "2": "2",
@@ -268,6 +269,7 @@
     "Insert Addon": "Zusatz einfügen",
     "Interact with dropbox": "Arbeiten mit Dropbox",
     "italic": "kursiv",
+    "jumpline_anchor": "Sprungl.Anker",
     "jumplines": "Sprunglinien",
     "jumptarget": "Sprungziel",
     "Jumptarget": "Sprungziel",
